--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     margin: 20px;
+    z-index: 3;
 }
 
 .title-courses-view {
@@ -17,6 +18,7 @@
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    z-index: 3;
   }
   
   .card {
@@ -85,7 +87,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 3;
+    z-index: 0;
     padding: 20px 30px;
 
   }
